<resources>
    <string name="app_name">Radix Ltd</string>
    <string name="menu_promotions">Promotions</string>
    <string name="menu_offer">Request offer</string>
    <string name="menu_order">Make order</string>
    <string name="menu_prices">Prices</string>
    <string name="menu_languages">Languages</string>
    <string name="menu_about">About us</string>
    <string name="menu_profile">Your profile</string>
    <string name="menu_invoices">Invoices</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_title">Login</string>
    <string name="login_forgot_pass_text">Forgot Password?</string>
    <string name="login_no_account_text">Don\'t have an account? Sign up here ></string>
    <string name="login_reset_pass_old_pass">Current password</string>
    <string name="login_reset_pass_new_pass">New password</string>
    <string name="login_reset_pass_confirm_password">Confirm password</string>
    <string name="login_reset_pass_send">Send</string>
    <string name="login_reset_pass_message">Please reset your password</string>
    <string name="register_name_hint">Full Name</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_btn_title">Register</string>
    <string name="forgot_pass_email_hint">Email</string>
    <string name="forgot_pass_btn_title">Reset password</string>
    <string name="offer_title">Request offer</string>
    <string name="offer_select_document">Select documents (one by time)</string>
    <string name="offer_selected_documents">Selected documents:</string>
    <string name="offer_full_name">Full name</string>
    <string name="offer_order_type">Order type</string>
    <string name="offer_express_order">Express</string>
    <string name="offer_normal_order">Normal</string>
    <string name="offer_translation_type">Translation type</string>
    <string name="offer_translation_special">Specialized</string>
    <string name="offer_translation_normal">Non-specialized</string>
    <string name="offer_description">Add notes to your order</string>
    <string name="offer_languages">Languages</string>
    <string name="offer_language_from">From language</string>
    <string name="offer_language_to">To language</string>
    <string name="offer_email">Get response on email</string>
    <string name="offer_current_email">Current email</string>
    <string name="offer_other_email">Other email</string>
    <string name="offer_phone">Phone number</string>
    <string name="offer_submit">Submit</string>
    <string name="order_title">Make an order</string>
    <string name="order_from_offer_title">Got an offer before the order?</string>
    <string name="order_has_offer">Yes</string>
    <string name="order_not_has_offer">No</string>
    <string name="order_enter_offer_id_text">Please enter the ID of your offer and click the check button to get the main data pre-populated for you</string>
    <string name="order_delivery_date">Desired delivery date</string>
    <string name="order_delivery_date_text">Choose the date on which you would like to get your order ready</string>
    <string name="order_delivery_time_text">Choose the time in which you would like to get your order ready (if any)</string>
    <string name="order_delivery_type_label">How do you want to get your order when it is ready</string>
    <string name="order_delivery_on_email">On Email</string>
    <string name="order_delivery_from_office">From our office</string>
    <string name="order_delivery_by_post">By post</string>
    <string name="order_price_label">Anticipated price</string>
    <string name="order_price_text">This field is not a mandatory one. Please input it if you have any idea how much it will cost. In the confirmation email you will get the final price for your order from our officers.</string>
    <string name="order_price_currency">€</string>
    <string name="order_payment_method">Payment method</string>
    <string name="order_payment_bank">Bank transfer</string>
    <string name="order_payment_cash">Cash</string>
    <string name="order_payment_cash_delivery">Cash on delivery</string>
    <string name="order_invoices">Invoices you would like to get</string>
    <string name="order_proforma_invoices">Proforma invoice</string>
    <string name="order_invoice">Invoice</string>
    <string name="order_invoice_data_tile">Invoice data</string>
    <string name="order_invoice_down_payment">Down Payment</string>
    <string name="order_invoice_currency">Currency</string>
    <string name="order_invoice_language">Language</string>
    <string name="order_invoice_name">Company/Person\'s Name</string>
    <string name="order_invoice_uid">Unique ID code</string>
    <string name="order_invoice_vat">VAT Number</string>
    <string name="order_invoice_address">Address</string>
    <string name="order_invoice_phone">Phone</string>
    <string name="order_invoice_contact_person">Contact Person</string>
    <string name="loader_dialog_text">Loading&#8230;</string>
    <string name="profile_offers_count">Requested Offers</string>
    <string name="profile_orders_count">Orders</string>
    <string name="profile_total_count">Total</string>
    <string name="profile_edit">Edit profile</string>
    <string name="profile_my_offers">My Offers</string>
    <string name="profile_my_orders">My Orders</string>
    <string name="profile_logout_confirmation_msg">Are you sure you want to logout?</string>
    <string name="profile_logout_icon_text">Logout</string>
    <string name="all_offers_all">All</string>
    <string name="all_offers_pending">Pending</string>
    <string name="all_offers_with_response">Got response</string>
    <string name="no_responses_received_text">No responses are received for this offer. Please check later again.</string>
    <string name="no_responses_for_order_received_text">No responses are received for this order. Please check later again.</string>
    <string name="all_offers_no_offers_of_type">No offers found of the selected type</string>
    <string name="all_orders">All</string>
    <string name="all_orders_not_processed">Pending</string>
    <string name="all_orders_in_progress">In progress</string>
    <string name="all_orders_ready">Ready</string>
    <string name="all_orders_no_orders_of_type">No orders found of the selected type</string>
    <string name="dialog_yes_no_title">Confirmation</string>
    <string name="dialog_yes_no_yes_btn">Yes</string>
    <string name="dialog_yes_no_no_btn">No</string>
    <string name="dialog_response_title">Your Response</string>
    <string name="dialog_response_hint">Write your response here&#8230;</string>
    <string name="dialog_response_send_btn">Send</string>
    <string name="dialog_response_cancel_btn">Cancel</string>
    <string name="send_response_loading_dialog_text">Sending response&#8230;</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="order_details_title">Order Details</string>
    <string name="order_details_date">Ordered on</string>
    <string name="order_details_id">Order number</string>
    <string name="order_details_amount">Total amount</string>
    <string name="order_details_no_data_for_price">No data yet</string>
    <string name="order_details_info">Order Info</string>
    <string name="order_details_discussion">Discussion</string>
    <string name="order_details_from_language">From Language</string>
    <string name="order_details_to_language">To Language</string>
    <string name="order_details_documents">Ordered Documents</string>
    <string name="order_details_order_type">Order Type</string>
    <string name="order_details_translation_type">Translation Type</string>
    <string name="order_details_ed_date">Expected delivery date</string>
    <string name="order_details_receiving">Receiving the order</string>
    <string name="order_details_full_name">Full Name</string>
    <string name="order_details_notes">Notes to your order</string>
    <string name="order_details_email">Email for response</string>
    <string name="order_details_phone">Phone Number</string>
    <string name="offer_details_title">Offer Details</string>
    <string name="offer_details_date">Sent on</string>
    <string name="offer_details_id">Inquiry ID</string>
    <string name="offer_details_files_count">Files amount</string>
    <string name="offer_details_info">Inquiry Info</string>
    <string name="offer_details_discussion">Discussion</string>
    <string name="offer_details_from_language">From Language</string>
    <string name="offer_details_to_language">To Language</string>
    <string name="offer_details_documents">Documents</string>
    <string name="offer_details_order_type">Order Type</string>
    <string name="offer_details_translation_type">Translation Type</string>
    <string name="offer_details_des_date">Desired delivery date</string>
    <string name="offer_details_notes">Notes to your inquiry</string>
    <string name="offer_details_email">Email for response</string>
    <string name="offer_details_phone">Phone Number</string>
    <string name="fragment_about_title">About</string>
    <string name="fragment_about_text">Picture this… a tiny, rather crammed office with merely two employees and one typewriter, located right next to the Ministry of Exterior – over 20 years ago that was the way RADIX LTD started. Ever since that day we had the great pleasure to accommodate for many projects and to present them in such a way, that they meet the highest standards in any aspect and to facilitate the work of countless experts. True – our origins are humble, but our motivation to reach further grows stronger by the day and today we are proud to say that we are right where we want to be – next to you, offering you the best service and making sure that you succeed.</string>
    <string name="fragment_about_tc">Terms and Conditions</string>
    <string name="fragment_about_version">Version %s</string>
    <string name="activity_about_copyright">Copyright © Radix LTD. All rights reserved.</string>
    <string name="dialog_terms_conditions_title">Terms and conditions</string>
    <string name="fragment_invoices_no_invoices_found">No invoices found of the selected type</string>
</resources>