<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.angelova.w510.radixapp.list_fragments.AllOrdersFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent">

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/chart_bottom_guideline"
        app:layout_constraintGuide_percent="0.09"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/chart_layout"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chart_bottom_guideline"
        android:weightSum="4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_orders"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@color/colorPrimary"
            android:id="@+id/all_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_orders_not_processed"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:id="@+id/not_processed_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_orders_in_progress"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/in_progress_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_orders_ready"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/ready_title"/>
    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/main_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart_bottom_guideline"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/all_orders_no_orders_of_type"
            android:gravity="center"
            android:id="@+id/no_orders_view"
            android:visibility="gone"/>

        <com.melnykov.fab.FloatingActionButton
            android:id="@+id/add_new_order_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            android:src="@drawable/fab_add"
            app:layout_anchorGravity="bottom|right|end"
            app:fab_shadow="true"
            app:fab_shadowColor="#66000000"
            app:fab_shadowRadius="4dp"
            app:fab_shadowXOffset="1dp"
            app:fab_shadowYOffset="3dp"
            app:fab_colorNormal="@color/colorPrimary"/>

    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>