<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.angelova.w510.radixapp.list_fragments.AllOffersFragment"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent">

    <android.support.constraint.Guideline
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/chart_bottom_guideline"
        app:layout_constraintGuide_percent="0.09"
        android:orientation="horizontal"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/chart_layout"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/chart_bottom_guideline"
        android:weightSum="3">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_offers_all"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:background="@color/colorPrimary"
            android:id="@+id/all_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_offers_pending"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:id="@+id/pending_title"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/all_offers_with_response"
            android:gravity="center"
            android:textSize="15sp"
            android:textColor="@color/colorPrimary"
            android:id="@+id/with_response_title"/>
    </LinearLayout>

<android.support.design.widget.CoordinatorLayout
    android:id="@+id/main_content"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/chart_bottom_guideline"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_marginTop="10dp">

    <android.support.v4.widget.SwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/swipe_container">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"/>
    </android.support.v4.widget.SwipeRefreshLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/all_offers_no_offers_of_type"
        android:gravity="center"
        android:id="@+id/no_offers_view"
        android:visibility="gone"/>

    <com.melnykov.fab.FloatingActionButton
        android:id="@+id/add_new_offer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/fab_add"
        app:layout_anchorGravity="bottom|right|end"
        app:fab_shadow="true"
        app:fab_shadowColor="#66000000"
        app:fab_shadowRadius="4dp"
        app:fab_shadowXOffset="1dp"
        app:fab_shadowYOffset="3dp"
        app:fab_colorNormal="@color/colorPrimary"/>

    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>