<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.2"
        android:id="@+id/guideline_left"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.8"
        android:id="@+id/guideline_right"
        android:orientation="vertical" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/input_field_height"
        android:id="@+id/title_view"
        android:text="@string/dialog_yes_no_title"
        android:textSize="@dimen/warn_dialog_title_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message_view"
        tools:text="Are you sure ... ?"
        android:gravity="center"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="end"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:text="@string/dialog_yes_no_no_btn"
            android:fontFamily="sans-serif"
            android:id="@+id/no_button"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary"
            android:gravity="end"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:text="@string/dialog_yes_no_yes_btn"
            android:fontFamily="sans-serif"
            android:id="@+id/yes_button"/>
    </LinearLayout>

    <!--</LinearLayout>-->

</LinearLayout>