<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="20dp"
    android:layout_marginStart="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginEnd="20dp">

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.2"
        android:id="@+id/guideline_left"
        android:orientation="vertical" />

    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintGuide_percent="0.8"
        android:id="@+id/guideline_right"
        android:orientation="vertical" />

    <!--<LinearLayout-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:layout_constraintLeft_toLeftOf="@+id/guideline_left"-->
    <!--app:layout_constraintRight_toRightOf="@+id/guideline_right"-->
    <!--android:orientation="vertical">-->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/input_field_height"
        android:id="@+id/title_view"
        android:text="@string/dialog_response_title"
        android:textSize="@dimen/warn_dialog_title_text_size"
        android:textColor="@color/colorPrimaryDark"
        android:gravity="center"
        android:layout_gravity="center"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toLeftOf="@+id/guideline_right"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:id="@+id/message_view"
        android:hint="@string/dialog_response_hint"
        android:gravity="top|left"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        app:layout_constraintTop_toBottomOf="@id/title_view"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/rounded_edit_text"
        android:padding="10dp"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:maxLines="20"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#10000000"
        android:elevation="1dp"
        android:id="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/message_view"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="visible"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/warn_dialog_button_height"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/buttons_layout">

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/warn_dialog_button_height"
            android:text="@string/dialog_response_send_btn"
            android:gravity="center"
            android:textSize="@dimen/warn_dialog_buttons_text_size"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/send_button"
            android:layout_weight="1"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="@dimen/warn_dialog_button_height"
            android:text="@string/dialog_response_cancel_btn"
            android:gravity="center"
            android:textSize="@dimen/warn_dialog_buttons_text_size"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/cancel_button"
            android:layout_weight="1"/>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#10000000"
        android:elevation="1dp"
        android:id="@+id/divider2"
        app:layout_constraintTop_toBottomOf="@+id/buttons_layout"
        app:layout_constraintLeft_toLeftOf="@+id/guideline_left"
        app:layout_constraintRight_toRightOf="@+id/guideline_right"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:visibility="visible"/>

    <!--</LinearLayout>-->

</android.support.constraint.ConstraintLayout>